refact: Criando schemas para rota de login
