# storage/api-docs/api-docs.json
@@ -14,22 +14,85 @@
         "/login": {
             "post": {
                 "tags": [
-                    "Auth"
+                    "Autenticação"
                 ],
-                "summary": "Realiza login",
+                "summary": "Autentica um usuário",
                 "operationId": "56e0e1f432a10a3634a680a39b8b1592",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/AuthLoginRequestSchema"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "Login realizado com sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/AuthLoginResponseSchema"
+                                }
+                            }
+                        }
                     }
                 }
             }
         }
     },
+    "components": {
+        "schemas": {
+            "AuthLoginRequestSchema": {
+                "required": [
+                    "email",
+                    "password"
+                ],
+                "properties": {
+                    "email": {
+                        "description": "E-mail do usuário",
+                        "type": "string",
+                        "format": "email",
+                        "example": "joao@email.com"
+                    },
+                    "password": {
+                        "description": "Senha do usuário",
+                        "type": "string",
+                        "format": "password",
+                        "example": "12345678",
+                        "minLength": 8
+                    }
+                },
+                "type": "object"
+            },
+            "AuthLoginResponseSchema": {
+                "properties": {
+                    "email": {
+                        "description": "E-mail do usuário autenticado",
+                        "type": "string",
+                        "example": "joao@email.com"
+                    },
+                    "nome": {
+                        "description": "Nome do usuário",
+                        "type": "string",
+                        "example": "João Pedro"
+                    },
+                    "token": {
+                        "description": "Token Bearer utilizado para autenticação",
+                        "type": "string",
+                        "example": "1|xKgM4...."
+                    }
+                },
+                "type": "object"
+            }
+        }
+    },
     "tags": [
         {
-            "name": "Auth",
-            "description": "Auth"
+            "name": "Autenticação",
+            "description": "Autenticação"
         }
     ]
 }
